--- a/back/package.json
+++ b/back/package.json
@@ -14,19 +14,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "@types/jsonwebtoken": "9.0.10",
+    "bcrypt": "6.0.0",
+    "colors": "1.4.0",
+    "cors": "2.8.5",
+    "dotenv": "17.2.3",
+    "express": "5.1.0",
+    "jsonwebtoken": "9.0.2",
+    "pg": "8.16.3",
+    "reflect-metadata": "0.2.2",
+    "typeorm": "0.3.27",
+    "zod": "4.1.12"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.8.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.1",
-    "@typescript-eslint/parser": "^8.46.1",
-    "eslint": "^9.38.0",
-    "globals": "^16.4.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
+    "@types/bcrypt": "6.0.0",
+    "@types/cors": "2.8.19",
+    "@types/express": "5.0.3",
+    "@types/node": "24.8.1",
+    "@typescript-eslint/eslint-plugin": "8.46.1",
+    "@typescript-eslint/parser": "8.46.1",
+    "eslint": "9.38.0",
+    "globals": "16.4.0",
+    "tsx": "4.20.6",
+    "typescript": "5.9.3"
   }
 }
