--- a/back/.gitignore
+++ b/back/.gitignore
@@ -5,7 +5,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Build outputs
-build/
+# build/
 dist/
 *.tsbuildinfo
 
@@ -92,7 +92,7 @@ coverage/
 
 # System files
 .DS_Store
-Thumbs.db
+Thumbs.dbñ
 
 # IDE
 .vscode/
